--- a/app/views/homeinspectors/edit.html.erb
+++ b/app/views/homeinspectors/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing homeinspector</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_homeinspectortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @homeinspector %> |
-<%= link_to 'Back', homeinspectors_path %>
+<%= link_to t('back'), homeinspectors_path %>
