--- a/app/views/homeinspectors/new.html.erb
+++ b/app/views/homeinspectors/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New homeinspector</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_homeinspectortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', homeinspectors_path %>
+<%= link_to t('back'), homeinspectors_path %>
