--- a/app/views/insulations/edit.html.erb
+++ b/app/views/insulations/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing insulation</h1>
-
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_insulationtitle_html') %>
+  
+ </div>
+ </div>
+ 
 <%= render 'form' %>
 
 <%= link_to 'Show', @insulation %> |
-<%= link_to 'Back', insulations_path %>
+<%= link_to t('back'), insulations_path %>
