--- a/app/views/insulations/new.html.erb
+++ b/app/views/insulations/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New insulation</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_insulationtitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', insulations_path %>
+<%= link_to t('back'), insulations_path %>
