--- a/app/views/insulations/search.html.erb
+++ b/app/views/insulations/search.html.erb
@@ -1,21 +1,4 @@
-<div class="jumbotron">
-  <div class="left">
-    <%= t('jumbotron_insulationtitle_html') %>
-  
- </div>
- </div>
-
-<div class="left">
-  <%= t('searchservice_html') %>
-   <%= form_tag search_insulations_path, method: :get do %>
-          <p>
-        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
-        <br>
-         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
-      </p>
-    </div>
-  <% end %>
-
+<%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
@@ -46,12 +29,6 @@
     </div>
 
   </div>
-</div> 
-
-
-<br>
-<br>
-
-
-<%= link_to t('add_service'), new_insulation_path, class: "btn btn-success" %>
-
+</div>   
+   
+<%= link_to t('back'), insulations_path, class: "btn btn-link"  %>
