--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 			<div class="col-sm-3">
 			<div class="left">
 			<h5 style="font-family:Calibri">
-				Copyright &copy; 2015 <strong>D&G Global INC</strong><br>
+				Copyright &copy; 2015 <link><a href="http://www.dngglobal.ca"><strong>D&G Global INC</strong></a></link><br>
 				All Rights Reserved 
 				<link><a href="/pages/termsofuse"><font color="white">Terms & Conditions</font></a></link>|<link><a href="/pages/privacypolicy"><font color="white">Privacy Policy</font></a></link></h5>
 		 	</div>
@@ -15,8 +15,8 @@
 			<div class="left">
 				<%= t('contact_html') %>
 				
-				<link><a href="/pages/home"><font color="white">customers@ontariosonly.ca</font></a></link>
-				<h5 style="font-family:Tahoma" ><font size="4"><strong>1-844-ONT-ONLY</strong></font></h5>
+				<link><a href="/pages/home"><font color="white">customers@dngglobal.ca</font></a></link>
+				<h5 style="font-family:Tahoma" ><font size="4"><strong>1-844-DG-GLOB</strong></font></h5>
 				</div>
 			</div>
 				<div class="col-sm-3">
