--- a/app/views/realtors/index.html.erb
+++ b/app/views/realtors/index.html.erb
@@ -32,7 +32,7 @@
             <%= realtor.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= realtor.address %><br> 
-           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= realtor.city %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><br><%= realtor.city %><br>
            <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= realtor.zipcode %><br>
            <br>
            
