--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -22,7 +22,7 @@
      <% @arquitects.each do |arquitect| %>
       <div class="col-md-3">
       <div class="thumbnail">
-        <%= link_to image_tag(arquitect.image.url), arquitect %>
+        <%= link_to image_tag(arquitect.image.url(:large)), arquitect %>
         <div class="caption">
           <h4><strong><%= arquitect.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
@@ -31,7 +31,7 @@
             <%= arquitect.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= arquitect.address %><br> 
-           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= arquitect.city %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><br><%= arquitect.city %><br>
            <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= arquitect.zipcode %><br>
            <br>
            
