--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -142,7 +142,7 @@
             </div>
              <%= image_tag("cement.jpg", :size => "100x100", :alt => "CustomCabinets", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -212,7 +212,7 @@
             </div>
              <%= image_tag("electrician.png", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -248,7 +248,7 @@
             </div>
              <%= image_tag("engineer.jpg", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -346,7 +346,7 @@
             </div>
              <%= image_tag("home.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
