--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-md-4">
       <%= f.label :service_type %><br>
-      <%= f.select :service_type, options_for_select([["Any option", "Any option"], ["Appliance Sale","Appliance Sale"], ["Appliance Repair","Appliance Repair"], ["Builders","Builders"], ["Building Material","Building Material"], ["Cement and Concrete","Cement and Concrete"], ["Cleaning Services","Cleaning Services"], ["Cleaning Removal","Cleaning Removal"], ["Electricians","Electricians"], ["Engineers","Engineers"], ["Home Theather","Home Theather"], ["Siding and Stucco","Siding and Stucco"]]), class: "form-control" %><br>
+      <%= f.select :service_type, options_for_select([["Any option", "Any option"], ["Appliance Sale","Appliance Sale"], ["Appliance Repair","Appliance Repair"], ["Builders","Builders"], ["Building Material","Building Material"], ["Cement and Concrete","Cement and Concrete"], ["Cleaning Services","Cleaning Services"], ["Cleaning Removal","Cleaning Removal"], ["Electricians","Electricians"], ["Engineers","Engineers"], ["Foundations","Foundations"], ["Fireplace","Fireplace"], ["Lighthing Fictures","Lighthing Fictures"], ["Solar Energy","Solar Energy"], ["Senior or Disable Home or Office Equipment","Senior or disable Home or Office Equipment"], ["Home Theather","Home Theather"], ["Siding and Stucco","Siding and Stucco"]]), class: "form-control" %><br>
     </div>
     <div class="col-md-4">
       <%= f.label :company_name %><br>
