--- a/app/views/privatefirms/index.html.erb
+++ b/app/views/privatefirms/index.html.erb
@@ -38,9 +38,10 @@
            <br>
            
            <td><%= link_to 'Show', privatefirm, class: "btn btn-success" %></td>
-        
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_privatefirm_path(privatefirm), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', privatefirm, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
